@@ -1,3 +1,8 @@
+2013-01-26  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* EcAlarmDestination.m:
+	* EcAlarmSinkSNMP.m: Fix problem flushing alarms on process shutdown.
+
 2012-12-17  Niels Grewe <niels.grewe@halbordnung.de>
 
 	* EcAlarmDestination.m: Fix designated initializer behaviour.
